fixed issue with whitespace below chart

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,11 @@
 html {
-  font-size: 95%;
+  font-size: 100%;
 } 
 
 .chart-container {
   position: relative;
   margin: auto;
-  height: 55vh;
+  aspect-ratio: 100 / 55;
   width: 100vw;
 }
 
